--- a/dotnetv3/Pinpoint/SendEmailSmtp/settings.json
+++ b/dotnetv3/Pinpoint/SendEmailSmtp/settings.json
@@ -1,5 +1,11 @@
 {
+  "SmtpEndpoint": "email-smtp.us-east-1.amazonaws.com",
+  "SmtpPort": 587,
+  "SenderName": "Mary Major",
   "SenderAddress": "sender@example.com",
   "ToAddress": "recipient@example.com",
-  "AppId": "ce796be37f32f178af652b26eexample"
+  "CcAddress": "cc-recipient@example.com",
+  "BccAddress": "bcc-recipient@example.com",
+  "SmtpUsername": "AKIAIOSFODNN7EXAMPLE",
+  "SmtpPswd": "SMTPPASSWORD"
 }
