--- a/dotnetv3/Pinpoint/SendSmsMessage/settings.json
+++ b/dotnetv3/Pinpoint/SendSmsMessage/settings.json
@@ -1,5 +1,7 @@
 {
-  "SenderAddress": "sender@example.com",
-  "ToAddress": "recipient@example.com",
-  "AppId": "ce796be37f32f178af652b26eexample"
+  "OriginationNumber": "+12344567",
+  "DestinationNumber": "+12345567",
+  "AppId": "ce796be37f32f178af652b26eexample",
+  "RegisteredKeyword": "myKeyword",
+  "SenderId": "mySenderId"
 }
