--- a/dotnetv3/Pinpoint/PinpointTests/PinpointTests.csproj
+++ b/dotnetv3/Pinpoint/PinpointTests/PinpointTests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SendEmailMessage\SendEmailMessage.csproj" />
+    <ProjectReference Include="..\SendSmsMessage\SendSmsMessage.csproj" />
   </ItemGroup>
 
   <ItemGroup>
