--- a/dotnetv3/Pinpoint/SendSmsMessage/SendSmsMessage.csproj
+++ b/dotnetv3/Pinpoint/SendSmsMessage/SendSmsMessage.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.Pinpoint" Version="3.7.300.71" />
+    <PackageReference Include="AWSSDK.PinpointSMSVoiceV2" Version="3.7.301.78" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
