--- a/cpp/example_code/acm/tests/CMakeLists.txt
+++ b/cpp/example_code/acm/tests/CMakeLists.txt
@@ -51,15 +51,17 @@ add_executable(
 )
 
 if (WINDOWS_BUILD)
-    # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
-    # and set the proper subdirectory to the executables' location.
+    if (AWSSDK_INSTALL_AS_SHARED_LIBS)
+        # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
+        # and set the proper subdirectory to the executables' location.
 
-    # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
-    AWSSDK_CPY_DYN_LIBS(
-            CURRENT_TARGET_AWS_DEPENDENCIES
-            ""
-            ${CMAKE_CURRENT_BINARY_DIR} ${BIN_SUB_DIR}
-    )
+        # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
+        AWSSDK_CPY_DYN_LIBS(
+                CURRENT_TARGET_AWS_DEPENDENCIES
+                ""
+                ${CMAKE_CURRENT_BINARY_DIR} ${BIN_SUB_DIR}
+        )
+    endif()
 
     add_custom_command(
             TARGET
