--- a/cpp/example_code/aurora/CMakeLists.txt
+++ b/cpp/example_code/aurora/CMakeLists.txt
@@ -34,7 +34,7 @@ find_package(AWSSDK REQUIRED COMPONENTS ${SERVICE_COMPONENTS})
 
 # If the compiler is some version of Microsoft Visual C++, or another compiler simulating C++,
 # and building as shared libraries, then dynamically link to those shared libraries.
-if(MSVC AND BUILD_SHARED_LIBS)
+if(WINDOWS_BUILD AND AWSSDK_INSTALL_AS_SHARED_LIBS)
     add_definitions(-DUSE_IMPORT_EXPORT)
     # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
 
