updated CMakeLists.txt for Windows static build

--- a/cpp/example_code/ses/CMakeLists.txt
+++ b/cpp/example_code/ses/CMakeLists.txt
@@ -28,8 +28,7 @@ endif()
 # Find the AWS SDK for C++ package.
 find_package(AWSSDK REQUIRED COMPONENTS ${SERVICE_COMPONENTS})
 
-
-if(WINDOWS_BUILD)
+if(WINDOWS_BUILD AND AWSSDK_INSTALL_AS_SHARED_LIBS)
   # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
 
   # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
@@ -37,7 +36,6 @@ if(WINDOWS_BUILD)
 
   AWSSDK_CPY_DYN_LIBS(SERVICE_COMPONENTS "" ${CMAKE_CURRENT_BINARY_DIR}${BIN_SUB_DIR})
 endif()
-
 
 # AWSDOC_SOURCE can be defined in the command line to limit the files in a build. For example,
 # you can limit files to one action.
