--- a/cpp/example_code/sns/tests/CMakeLists.txt
+++ b/cpp/example_code/sns/tests/CMakeLists.txt
@@ -32,8 +32,11 @@ if (NOT GTest_FOUND)
     FetchContent_MakeAvailable(googletest)
 endif ()
 
+# Use the MSVC variable to determine if this is a Windows build.
+set(WINDOWS_BUILD ${MSVC})
+
 # Set the location for Windows to find the installed libraries of the SDK.
-if (MSVC)
+if (WINDOWS_BUILD)
     string(REPLACE ";" "/aws-cpp-sdk-all;" SYSTEM_MODULE_PATH "${CMAKE_SYSTEM_PREFIX_PATH}/aws-cpp-sdk-all")
     list(APPEND CMAKE_PREFIX_PATH ${SYSTEM_MODULE_PATH})
 endif ()
@@ -45,17 +48,18 @@ add_executable(
         ${CURRENT_TARGET}
 )
 
-# If the compiler is some version of Microsoft Visual C++, or another compiler simulating C++,
-# and building as shared libraries, then dynamically link to those shared libraries.
-if (MSVC)
-    set(CMAKE_BUILD_TYPE Debug) # Explicitly set this to support library copying and test automation.
+if (WINDOWS_BUILD)
+    if (AWSSDK_INSTALL_AS_SHARED_LIBS)
+        # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
+        # and set the proper subdirectory to the executables' location.
 
-    # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
-    AWSSDK_CPY_DYN_LIBS(
-            CURRENT_TARGET_AWS_DEPENDENCIES
-            ""
-            ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
-    )
+        # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
+        AWSSDK_CPY_DYN_LIBS(
+                CURRENT_TARGET_AWS_DEPENDENCIES
+                ""
+                ${CMAKE_CURRENT_BINARY_DIR} ${BIN_SUB_DIR}
+        )
+    endif ()
 
     add_custom_command(
             TARGET
