Add correct subdir for windows

--- a/cpp/example_code/sts/tests/CMakeLists.txt
+++ b/cpp/example_code/sts/tests/CMakeLists.txt
@@ -49,10 +49,10 @@ add_executable(
 )
 
 if (WINDOWS_BUILD)
-    if (AWSSDK_INSTALL_AS_SHARED_LIBS)
-        # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
-        # and set the proper subdirectory to the executables' location.
+    # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
+    # and set the proper subdirectory to the executables' location.
 
+    if (AWSSDK_INSTALL_AS_SHARED_LIBS)
         # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
         AWSSDK_CPY_DYN_LIBS(
                 CURRENT_TARGET_AWS_DEPENDENCIES
@@ -62,14 +62,14 @@ if (WINDOWS_BUILD)
     endif ()
 
     add_custom_command(
-        TARGET
-        ${CURRENT_TARGET}
-        POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy
-                ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/${CMAKE_BUILD_TYPE}/gtest.dll
-                ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
+            TARGET
+            ${CURRENT_TARGET}
+            POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy
+            ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}${BIN_SUB_DIR}/gtest.dll
+            ${CMAKE_CURRENT_BINARY_DIR}${BIN_SUB_DIR}
     )
- endif()
+endif ()
 
 # GTEST_SOURCE_FILES can be defined in the command line to limit the files in a build. For example,
 # you can limit files to one action.
