--- a/.github/workflows/validate-doc-metadata.yml
+++ b/.github/workflows/validate-doc-metadata.yml
@@ -18,6 +18,6 @@ jobs:
       - name: checkout repo content
         uses: actions/checkout@v4
       - name: validate metadata
-        uses: awsdocs/aws-doc-sdk-examples-tools@2024-04-30-A
+        uses: awsdocs/aws-doc-sdk-examples-tools@2024-04-30-B
         with:
           doc_gen_only: "False"
