--- a/javascriptv3/package.json
+++ b/javascriptv3/package.json
@@ -49,6 +49,8 @@
     "example_code/medical-imaging",
     "example_code/medical-imaging/scenarios/health-image-sets/pixel-data-verification",
     "example_code/nodegetstarted",
+    "example_code/personalize",
+    "example_code/pinpoint",
     "example_code/polly",
     "example_code/redshift",
     "example_code/s3",
@@ -59,19 +61,20 @@
     "example_code/sqs",
     "example_code/sts",
     "example_code/support",
+    "example_code/transcribe",
     "example_code/web/s3/list-objects",
     "example_code/sfn"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "@vitest/coverage-c8": "^0.33.0",
     "eslint": "^8.49.0",
     "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-import": "^2.28.1",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
+    "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "vitest": "^0.34.4"
   }
