--- a/cpp/example_code/codebuild/tests/CMakeLists.txt
+++ b/cpp/example_code/codebuild/tests/CMakeLists.txt
@@ -4,9 +4,9 @@
 # Set the minimum required version of CMake for this project.
 cmake_minimum_required(VERSION 3.14)
 
-set(EXAMPLE_SERVICE_NAME "aurora")
+set(EXAMPLE_SERVICE_NAME "codebuild")
 set(CURRENT_TARGET "${EXAMPLE_SERVICE_NAME}_gtest")
-set(CURRENT_TARGET_AWS_DEPENDENCIES rds)
+set(CURRENT_TARGET_AWS_DEPENDENCIES codebuild)
 
 # Set this project's name.
 project("${EXAMPLE_SERVICE_NAME}-examples-gtests")
@@ -16,6 +16,8 @@ set(CMAKE_CXX_STANDARD 14)
 
 # Build shared libraries by default.
 set(BUILD_SHARED_LIBS ON)
+
+enable_testing()
 
 find_package(GTest)
 
@@ -32,8 +34,11 @@ if (NOT GTest_FOUND)
     FetchContent_MakeAvailable(googletest)
 endif ()
 
+# Use the MSVC variable to determine if this is a Windows build.
+set(WINDOWS_BUILD ${MSVC})
+
 # Set the location for Windows to find the installed libraries of the SDK.
-if (MSVC)
+if (WINDOWS_BUILD)
     string(REPLACE ";" "/aws-cpp-sdk-all;" SYSTEM_MODULE_PATH "${CMAKE_SYSTEM_PREFIX_PATH}/aws-cpp-sdk-all")
     list(APPEND CMAKE_PREFIX_PATH ${SYSTEM_MODULE_PATH})
 endif ()
@@ -45,9 +50,7 @@ add_executable(
         ${CURRENT_TARGET}
 )
 
-# If the compiler is some version of Microsoft Visual C++, or another compiler simulating C++,
-# and building as shared libraries, then dynamically link to those shared libraries.
-if (MSVC AND BUILD_SHARED_LIBS)
+if (WINDOWS_BUILD)
     if (AWSSDK_INSTALL_AS_SHARED_LIBS)
         # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
         # and set the proper subdirectory to the executables' location.
@@ -65,13 +68,12 @@ if (MSVC AND BUILD_SHARED_LIBS)
             ${CURRENT_TARGET}
             POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy
-            ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/${CMAKE_BUILD_TYPE}/gtest.dll
-            ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
+            ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR} ${BIN_SUB_DIR}/gtest.dll
+            ${CMAKE_CURRENT_BINARY_DIR} ${BIN_SUB_DIR}
     )
 endif ()
 
-# GTEST_SOURCE_FILES can be defined in the command line to limit the files in a build. For example,
-# you can limit files to one action.
+# GTEST_SOURCE_FILES can be defined in the command line to limit the files in a build, for example to one action.
 if (NOT DEFINED GTEST_SOURCE_FILES)
     file(
             GLOB
@@ -79,8 +81,6 @@ if (NOT DEFINED GTEST_SOURCE_FILES)
             "gtest_*.cpp"
     )
 endif ()
-
-enable_testing()
 
 foreach (TEST_FILE ${GTEST_SOURCE_FILES})
     string(REPLACE "gtest_" "../" SOURCE_FILE ${TEST_FILE})
@@ -121,6 +121,7 @@ target_link_libraries(
 )
 
 include(GoogleTest)
+
 gtest_add_tests(
         TARGET
         ${CURRENT_TARGET}
